@@ -23,44 +23,42 @@ public class PaqueteService {
     public List<Paquete> ObtenertodoPaquetes() {
         List<Paquete> listapaquetes = new ArrayList<>();
 
-        String[] nompaqs = { // nombres paquetes
-                "Todo Incluido",
-                "Paquete Internet, Restaurante, Bebidas, Piscina",
-                "Paquete Internet, Restaurante-Buffet, Bebidas"
+        String[] nompaqs = { //nombres paquetes
+            "Todo Incluido",
+            "Paquete Internet, Restaurante, Bebidas, Piscina",
+            "Paquete Internet, Restaurante-Buffet, Bebidas"
         };
 
-        Cabina.Cabina_tipo[] tiposcabina = Cabina.Cabina_tipo.values();// values devuelve array de los enums
+        Cabina.Cabina_tipo[] tiposcabina = Cabina.Cabina_tipo.values();//values devuelve array de los enums
 
-        Barcos.Modelobarco[] tiposmodelo = Barcos.Modelobarco.values();// array de modelos de barco
+        Barcos.Modelobarco[] tiposmodelo = Barcos.Modelobarco.values();//array de modelos de barco
 
         List<Ruta> rutas = rutaService.obtenerTodoRutas();
 
-        String[] descs = { // descripciones de paquetes
-                "Todos los beneficios del crucero",
-                "Acceso a Internet Ilimitado, Bebidas ilimitadas, Restaurantes gourmet, Buffet y Piscinas",
-                "Acceso basico a Internet Ilimitado, Bebidas Ilimitadas y Buffet."
+        String[] descs = { //descripciones de paquetes
+            "Todos los beneficios del crucero",
+            "Acceso a Internet Ilimitado, Bebidas ilimitadas, Restaurantes gourmet, Buffet y Piscinas",
+            "Acceso basico a Internet Ilimitado, Bebidas Ilimitadas y Buffet."
         };
 
-        for (Ruta ruta : rutas) {// recorre las rutas
+        for (Ruta ruta : rutas) {//recorre las rutas
             switch (ruta.getNombre_ruta()) {
                 case "Caribe Occidental":
                     for (Barcos.Modelobarco tipomodelo : tiposmodelo) {
                         if (tipomodelo.equals(Barcos.Modelobarco.SMODEL)) {
                             for (Cabina.Cabina_tipo tipocabina : tiposcabina) {
                                 for (int i = 0; i < nompaqs.length; i++) {
-                                    Paquete paquete = new Paquete(nompaqs[i], tipocabina, descs[i], ruta);
+                                    Paquete paquete = new Paquete(nompaqs[i], tipocabina, descs[i], ruta, tipomodelo);
                                     listapaquetes.add(paquete);
-                                    // si ruta en el constructor no funciona usar esto,
-                                    // rutaService.buscarPorNombreRuta("Caribe Occidental")
+                                    //si ruta en el constructor no funciona usar esto, rutaService.buscarPorNombreRuta("Caribe Occidental")
                                 }
                             }
                         } else if (tipomodelo.equals(Barcos.Modelobarco.LMODEL)) {
                             for (Cabina.Cabina_tipo tipocabina : tiposcabina) {
                                 for (int i = 0; i < nompaqs.length; i++) {
-                                    Paquete paquete = new Paquete(nompaqs[i], tipocabina, descs[i], ruta);
+                                    Paquete paquete = new Paquete(nompaqs[i], tipocabina, descs[i], ruta, tipomodelo);
                                     listapaquetes.add(paquete);
-                                    // si ruta en el constructor no funciona usar esto,
-                                    // rutaService.buscarPorNombreRuta("Caribe Occidental")
+                                    //si ruta en el constructor no funciona usar esto, rutaService.buscarPorNombreRuta("Caribe Occidental")
                                 }
                             }
                         }
@@ -71,10 +69,9 @@ public class PaqueteService {
                         if (tipomodelo.equals(Barcos.Modelobarco.MMODEL)) {
                             for (Cabina.Cabina_tipo tipocabina : tiposcabina) {
                                 for (int i = 0; i < nompaqs.length; i++) {
-                                    Paquete paquete = new Paquete(nompaqs[i], tipocabina, descs[i], ruta);
+                                    Paquete paquete = new Paquete(nompaqs[i], tipocabina, descs[i], ruta, tipomodelo);
                                     listapaquetes.add(paquete);
-                                    // si ruta en el constructor no funciona usar esto,
-                                    // rutaService.buscarPorNombreRuta("Escapada a Bahamas")
+                                    //si ruta en el constructor no funciona usar esto, rutaService.buscarPorNombreRuta("Escapada a Bahamas")
                                 }
                             }
                         }
@@ -85,10 +82,9 @@ public class PaqueteService {
                         if (tipomodelo.equals(Barcos.Modelobarco.SMODEL)) {
                             for (Cabina.Cabina_tipo tipocabina : tiposcabina) {
                                 for (int i = 0; i < nompaqs.length; i++) {
-                                    Paquete paquete = new Paquete(nompaqs[i], tipocabina, descs[i], ruta);
+                                    Paquete paquete = new Paquete(nompaqs[i], tipocabina, descs[i], ruta, tipomodelo);
                                     listapaquetes.add(paquete);
-                                    // si ruta en el constructor no funciona usar esto,
-                                    // rutaService.buscarPorNombreRuta("Mediterráneo Clásico")
+                                    //si ruta en el constructor no funciona usar esto, rutaService.buscarPorNombreRuta("Mediterráneo Clásico")
                                 }
                             }
                         }
@@ -100,19 +96,17 @@ public class PaqueteService {
                         if (tipomodelo.equals(Barcos.Modelobarco.MMODEL)) {
                             for (Cabina.Cabina_tipo tipocabina : tiposcabina) {
                                 for (int i = 0; i < nompaqs.length; i++) {
-                                    Paquete paquete = new Paquete(nompaqs[i], tipocabina, descs[i], ruta);
+                                    Paquete paquete = new Paquete(nompaqs[i], tipocabina, descs[i], ruta, tipomodelo);
                                     listapaquetes.add(paquete);
-                                    // si ruta en el constructor no funciona usar esto,
-                                    // rutaService.buscarPorNombreRuta("Alaska Inexplorada")
+                                    //si ruta en el constructor no funciona usar esto, rutaService.buscarPorNombreRuta("Alaska Inexplorada")
                                 }
                             }
                         } else if (tipomodelo.equals(Barcos.Modelobarco.LMODEL)) {
                             for (Cabina.Cabina_tipo tipocabina : tiposcabina) {
                                 for (int i = 0; i < nompaqs.length; i++) {
-                                    Paquete paquete = new Paquete(nompaqs[i], tipocabina, descs[i], ruta);
+                                    Paquete paquete = new Paquete(nompaqs[i], tipocabina, descs[i], ruta, tipomodelo);
                                     listapaquetes.add(paquete);
-                                    // si ruta en el constructor no funciona usar esto,
-                                    // rutaService.buscarPorNombreRuta("Alaska Inexplorada")
+                                    //si ruta en el constructor no funciona usar esto, rutaService.buscarPorNombreRuta("Alaska Inexplorada")
                                 }
                             }
                         }
@@ -126,46 +120,36 @@ public class PaqueteService {
 
     }
 
-    //
+    // reserva controlador, no tocar
     public List<Paquete> buscarPorNombrePaquetes(List<String> nombres_paquetes) {
         return ObtenertodoPaquetes().stream()
-                .filter(p -> nombres_paquetes.contains(p.getNombre_paq()))
+                .filter(n -> nombres_paquetes.contains(n.getNombre_paq()))
                 .collect(Collectors.toList());
     }
 
-    public List<Paquete> buscarPorRutaPaquetes(List<String> nom_ruta_paquetes) {
-        // lista q saca los nombres de la lista ruta_paquetes
-        // map transforma los elementos del stream en otros, aqui es en string
-        /*
-         * List<String> nom_ruta_paquetes= ruta_paquetes.stream()
-         * .map(Ruta::getNombre_ruta).collect(Collectors.toList());
-         */
+    //mas que nada para que sean stackeables en los filtros
+    public List<Paquete> buscarPorRutaPaquetes(List<Paquete> listafilteroforiginal, List<String> nom_ruta_paquetes) {
+        //lista q saca los nombres de la lista ruta_paquetes
+        //map transforma los elementos del stream en otros, aqui es en string
+        /*List<String> nom_ruta_paquetes= ruta_paquetes.stream()
+                .map(Ruta::getNombre_ruta).collect(Collectors.toList());*/
 
-        return ObtenertodoPaquetes().stream()
-                .filter(p -> nom_ruta_paquetes.contains(p.getRuta_paq().getNombre_ruta()))
+        return listafilteroforiginal.stream()
+                .filter(nr -> nom_ruta_paquetes.contains(nr.getRuta_paq().getNombre_ruta()))
                 .collect(Collectors.toList());
 
     }
 
-    public List<Paquete> obtenerPaquetesPorRuta(String nombreRuta) {
-        return ObtenertodoPaquetes().stream()
-                .filter(p -> p.getRuta_paq().getNombre_ruta().equalsIgnoreCase(nombreRuta))
-                .toList();
+    public List<Paquete> buscarPorModeloPaquetes(List<Paquete> listafilteroforiginal, List<String> nom_modelo_paquetes) {
+        return listafilteroforiginal.stream().filter(nm -> nom_modelo_paquetes
+                .contains(nm.getModelobarco_paq().getModelo())).collect(Collectors.toList());
+
     }
 
-    public Paquete buscarPorNombrePaquete(String nombrePaquete) {
-        return ObtenertodoPaquetes().stream()
-                .filter(p -> p.getNombre_paq().equalsIgnoreCase(nombrePaquete))
-                .findFirst()
-                .orElse(null);
-    }
+    public List<Paquete> buscarPorCantMaxPerPaquetes(List<Paquete> listafilteroforiginal, List<Integer> num_personas_paquetes) {
+        return listafilteroforiginal.stream().filter(np -> num_personas_paquetes
+                .contains(np.getCabinatipo_paq().getCant_max_per())).collect(Collectors.toList());
 
-    public Paquete buscarPorNombreYRuta(String nombrePaquete, String nombreRuta) {
-        return ObtenertodoPaquetes().stream()
-                .filter(p -> p.getNombre_paq().equalsIgnoreCase(nombrePaquete) &&
-                        p.getRuta_paq().getNombre_ruta().equalsIgnoreCase(nombreRuta))
-                .findFirst()
-                .orElse(null);
     }
 
 }
